--- a/ML.ipynb
+++ b/ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "d8c2a762",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "93dcc734",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "6eee079b",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
        "(53, 6)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "5e1586e5",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "4           5  22.0  Female  45000.0             65          1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "f8aaf337",
    "metadata": {},
    "outputs": [
@@ -159,7 +159,7 @@
        "np.int64(3)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "eabe1fa4",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "9384d477",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "7816ac13",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "d37290c3",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "19546160",
    "metadata": {},
    "outputs": [],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "77d63382",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "3336e01d",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "8dcc16eb",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
        "Name: Gender Encoded , dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "0ba8dbbe",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
        "Index(['CustomerID', 'Age', 'Gender', 'Income', 'SpendingScore', 'Purchased'], dtype='object')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "e6a11427",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
        "Name: Gender Encoded , dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "2d82fee7",
    "metadata": {},
    "outputs": [
@@ -585,22 +585,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   CustomerID   Age  Gender   Income  SpendingScore  Purchased  \\\n",
-       "0           1  25.0    Male  50000.0             60          0   \n",
-       "1           2  30.0  Female  60000.0             80          0   \n",
-       "2           3   NaN  Female  55000.0             75          1   \n",
-       "3           4  45.0    Male      NaN             50          0   \n",
-       "4           5  22.0  Female  45000.0             65          1   \n",
-       "\n",
-       "   Gender Encoded   \n",
-       "0                1  \n",
-       "1                0  \n",
-       "2                0  \n",
-       "3                1  \n",
-       "4                0  "
+       "   CustomerID   Age  Gender   Income  SpendingScore  Purchased  Gender Encoded \n",
+       "0           1  25.0    Male  50000.0             60          0                1\n",
+       "1           2  30.0  Female  60000.0             80          0                0\n",
+       "2           3   NaN  Female  55000.0             75          1                0\n",
+       "3           4  45.0    Male      NaN             50          0                1\n",
+       "4           5  22.0  Female  45000.0             65          1                0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "d1320a3f",
    "metadata": {},
    "outputs": [],
@@ -630,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "dde51e10",
    "metadata": {},
    "outputs": [
@@ -641,7 +634,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StandardScaler,MinMaxScaler\n\u001b[0;32m      2\u001b[0m scale\u001b[38;5;241m=\u001b[39mStandardScaler()\n\u001b[1;32m----> 3\u001b[0m x_scale\u001b[38;5;241m=\u001b[39mscale\u001b[38;5;241m.\u001b[39mfit_transform()\n\u001b[0;32m      4\u001b[0m scale\u001b[38;5;241m=\u001b[39mMinMaxScaler()\n\u001b[0;32m      5\u001b[0m x_scale\u001b[38;5;241m=\u001b[39mscale\u001b[38;5;241m.\u001b[39mfit_transform(X)\n",
+      "Cell \u001b[1;32mIn[18], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StandardScaler,MinMaxScaler\n\u001b[0;32m      2\u001b[0m scale\u001b[38;5;241m=\u001b[39mStandardScaler()\n\u001b[1;32m----> 3\u001b[0m x_scale\u001b[38;5;241m=\u001b[39mscale\u001b[38;5;241m.\u001b[39mfit_transform()\n\u001b[0;32m      4\u001b[0m scale\u001b[38;5;241m=\u001b[39mMinMaxScaler()\n\u001b[0;32m      5\u001b[0m x_scale\u001b[38;5;241m=\u001b[39mscale\u001b[38;5;241m.\u001b[39mfit_transform(X)\n",
       "\u001b[1;31mTypeError\u001b[0m: TransformerMixin.fit_transform() missing 1 required positional argument: 'X'"
      ]
     }
@@ -1219,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2275dd0c",
    "metadata": {},
    "outputs": [
@@ -1262,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "bd272c8f",
    "metadata": {},
    "outputs": [
@@ -1297,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "34d1237a",
    "metadata": {},
    "outputs": [
@@ -1323,9 +1316,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1c8303c6",
+   "metadata": {},
+   "source": [
+    "MSE\n",
+    " RMSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "179b6825",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.75"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error,mean_squared_error,r2_score,f1_score\n",
+    "import numpy as np\n",
+    "real_score=[80,70,60,90]\n",
+    "predicted_score=[70,80,70,95]\n",
+    "mae=mean_absolute_error(real_score,predicted_score)\n",
+    "mse=mean_squared_error(real_score,predicted_score)\n",
+    "rmse=np.sqrt(mse)\n",
+    "mae\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7f078716",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81.25"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d2179a8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(9.013878188659973)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rmse"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "179b6825",
+   "id": "7184efe6",
    "metadata": {},
    "outputs": [],
    "source": []
